filter event types by action (#27)
