# api/openapi.yml
@@ -297,6 +297,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/pagination_limit'
         - $ref: '#/components/parameters/pagination_page'
+        - $ref: '#/components/parameters/action_filter'
       security:
         - BearerAuth: []
       responses:
@@ -485,6 +486,13 @@ components:
     name_filter:
       name: name
       description: Name filter
+      in: query
+      required: false
+      schema:
+        type: string
+    action_filter:
+      name: action
+      description: Action filter
       in: query
       required: false
       schema:
